Add new structure.